# clips-contract

./: .gitignore  AUDIT_CHECKLIST.md  GAS_BENCHMARKS.md  README.md  audit.md
clips_nft/: Cargo.toml
clips_nft/src/: lib.rs  safe_math.rs
clips_nft/test_snapshots/: test_approval_and_approval_for_all_flow.1.json  test_batch_mint_enforces_gas_safe_limit.1.json  test_blacklist_clip.1.json  test_claim_royalties_unauthorized_caller_fails.1.json  test_error_cases.1.json  test_get_clip_id.1.json  test_integration_wallet_simulation_mint_and_royalty.1.json  test_is_paused_false_before_timelock_elapses.1.json  test_mint_after_metadata_upload.1.json  test_name_and_symbol_configurable_by_admin.1.json  test_pause_timelock_blocks_mint_after_24h.1.json  test_pause_timelock_mint_still_works_before_24h.1.json  test_pay_royalty_sep41_transfers_to_recipient.1.json  test_royalty_on_secondary_sale.1.json  test_set_name_and_symbol.1.json
clips_nft/test_snapshots/tests/: test_balance_of_counts_owned_tokens.1.json  test_batch_mint_duplicate_clip_id_fails.1.json  test_batch_mint_emits_event.1.json  test_batch_mint_success.1.json  test_burn.1.json  test_burn_emits_event.1.json  test_calculate_royalty_amount_basic.1.json  test_calculate_royalty_amount_overflow_fails.1.json  test_calculate_royalty_amount_zero_price_fails.1.json  test_circuit_breaker_batch_mint_triggers.1.json  test_mint_emits_event.1.json  (+66 more)
clips_nft/tests/: backend_simulation.rs  integration.rs  safe_math_fuzz.rs  sep41_royalty_integration.rs  test_helpers.rs  test_metadata_fields.rs  test_new_features.rs  upgrade_migration.rs
(+11 files in other folders)
